Parameter tests on Appaloosa, e.g. sigma clipping, consecutive points.

--- a/appaloosa/appaloosa_test_systematics.ipynb
+++ b/appaloosa/appaloosa_test_systematics.ipynb
@@ -272,10 +272,7 @@
    "source": [
     "os.chdir('/home/ekaterina/Documents/appaloosa/stars_shortlist/M67/results/test_01')\n",
     "\n",
-    "all_isflare = {}\n",
-    "for idx, oid in enumerate(oid_list):\n",
-    "    start_stop = pd.read_csv(str(oid)+'_flares.csv')\n",
-    "    \n",
+    "def edges_to_bool(df):\n",
     "    rangeflare = []\n",
     "    for i,row in start_stop.iterrows():\n",
     "            rangeflare.append(list(range(row.istart,row.istop)))\n",
@@ -283,8 +280,14 @@
     "    rangeflare = [item for sublist in rangeflare for item in sublist]\n",
     "\n",
     "    np.put(isflare,rangeflare,np.ones_like(rangeflare))\n",
+    "    \n",
+    "    return isflare\n",
     "\n",
-    "    all_isflare[oid] = isflare\n",
+    "all_isflare = {}\n",
+    "for idx, oid in enumerate(oid_list):\n",
+    "    \n",
+    "    start_stop = pd.read_csv(str(oid)+'_flares.csv')\n",
+    "    all_isflare[oid] = edges_to_bool(start_stop)\n",
     "#print(all_isflare)\n",
     "maxlen = max([len(val) for key,val in all_isflare.items()])\n",
     "\n",
