--- a/appaloosa/appaloosa_test_systematics.ipynb
+++ b/appaloosa/appaloosa_test_systematics.ipynb
@@ -730,6 +730,7 @@
     }
    ],
    "source": [
+    "\n",
     "for oid in oid_list:\n",
     "    RunLC_test(oid)"
    ]
@@ -740,6 +741,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
