Meta plots ongoing. Pleiades are a riddle.

--- a/appaloosa/10_11_systematics.ipynb
+++ b/appaloosa/10_11_systematics.ipynb
@@ -260,10 +260,19 @@
     "    start_stop = start_stop.join(pd.Series(stop,name='istop',dtype=int))\n",
     "    return start_stop   \n",
     "\n",
+    "def flagdecomp(x):\n",
+    "    '''\n",
+    "    Decompose cumulative flags\n",
+    "    '''\n",
+    "    flags = [i*2 for i in range(1,20)]\n",
+    "    print(flags)\n",
+    "    \n",
+    "    return\n",
+    "\n",
     "def remove_thruster_firings(tpfs, flux, flares, oid):\n",
     "    remove = []\n",
     "    for i in range(len(tpfs[oid].hdulist[1].data['FLUX'])): \n",
-    "        if tpfs[oid].hdulist[1].data['QUALITY'][i] > 524288:#flag values are summed up!\n",
+    "        if tpfs[oid].hdulist[1].data['QUALITY'][i] > 545288:#flag values are summed up!\n",
     "            remove.append(tpfs[oid].bkjd(i))\n",
     "            try:\n",
     "                remove.append(tpfs[oid].bkjd(i-1))\n",
