Working towards ED recovery.

--- a/appaloosa/6_7_8_characterization_CMDs_and_outliers.ipynb
+++ b/appaloosa/6_7_8_characterization_CMDs_and_outliers.ipynb
@@ -9,22 +9,385 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/home/ekaterina/Documents/appaloosa/stars_shortlist/M44/M44_parameter.csv']\n",
-      "Index(['Unnamed: 0', 'gmag', 'rmag', 'imag', 'zmag', 'ymag', 'J', 'H', 'K',\n",
-      "       'RAJ2000', 'DEJ2000', 'spec_class', 'T', 'logT', 'BCv', 'Mv', 'logL',\n",
-      "       'B-V', 'Bt-Vt', 'V-G', 'U-B', 'V-Rc', 'V-Ic', 'V-Ks', 'J-H', 'H-K',\n",
-      "       'Ks-W1', 'W1-W2', 'W1-W3', 'W1-W4', 'Msun', 'logAge', 'b-y', 'M_J',\n",
-      "       'M_Ks', 'Mbol', 'i-z', 'z-Y', 'R_Rsun', '#SpT.1', 'lum_class', 'u_g',\n",
-      "       'g_r', 'r_i', 'i_z', 'z_J', 'J_H', 'H_K', 'Jmag_abs', '35', 'L_quiet',\n",
-      "       'L_quiet_bol', 'r_z', 'J_K', 'g_z', 'g_i', 'T_err', 'R_Rsun_err', '61',\n",
-      "       'L_quiet_err'],\n",
+      "['/home/ekaterina/Documents/appaloosa/stars_shortlist/Pleiades/Pleiades_new_parameter.csv']\n",
+      "Reading library from /home/ekaterina/.specmatchemp/library.h5\n",
+      "T=  4070.0\n",
+      "T=  4070.0\n",
+      "T=  6240.0\n",
+      "T=  6240.0\n",
+      "T=  5920.0\n",
+      "T=  5920.0\n",
+      "T=  4410.0\n",
+      "T=  4410.0\n",
+      "T=  5040.0\n",
+      "T=  5040.0\n",
+      "T=  4620.0\n",
+      "T=  4620.0\n",
+      "T=  6040.0\n",
+      "T=  6040.0\n",
+      "T=  5170.0\n",
+      "T=  5170.0\n",
+      "T=  3800.0\n",
+      "T=  3800.0\n",
+      "T=  5280.0\n",
+      "T=  5280.0\n",
+      "T=  3500.0\n",
+      "T=  3500.0\n",
+      "T=  4410.0\n",
+      "T=  4410.0\n",
+      "T=  5340.0\n",
+      "T=  5340.0\n",
+      "T=  4830.0\n",
+      "T=  4830.0\n",
+      "T=  5880.0\n",
+      "T=  5880.0\n",
+      "T=  3030.0\n",
+      "T=  3030.0\n",
+      "T=  4410.0\n",
+      "T=  4410.0\n",
+      "T=  5280.0\n",
+      "T=  5280.0\n",
+      "T=  5880.0\n",
+      "T=  5880.0\n",
+      "T=  5040.0\n",
+      "T=  5040.0\n",
+      "T=  5590.0\n",
+      "T=  5590.0\n",
+      "T=  6510.0\n",
+      "T=  6510.0\n",
+      "T=  5660.0\n",
+      "T=  5660.0\n",
+      "T=  4230.0\n",
+      "T=  4230.0\n",
+      "T=  4410.0\n",
+      "T=  4410.0\n",
+      "T=  5590.0\n",
+      "T=  5590.0\n",
+      "T=  4830.0\n",
+      "T=  4830.0\n",
+      "T=  3100.0\n",
+      "T=  3100.0\n",
+      "T=  3410.0\n",
+      "T=  3410.0\n",
+      "T=  4000.0\n",
+      "T=  4000.0\n",
+      "T=  5340.0\n",
+      "T=  5340.0\n",
+      "T=  4070.0\n",
+      "T=  4070.0\n",
+      "T=  4230.0\n",
+      "T=  4230.0\n",
+      "T=  5720.0\n",
+      "T=  5720.0\n",
+      "T=  5280.0\n",
+      "T=  5280.0\n",
+      "T=  3870.0\n",
+      "T=  3870.0\n",
+      "T=  6340.0\n",
+      "T=  6340.0\n",
+      "T=  4620.0\n",
+      "T=  4620.0\n",
+      "T=  4070.0\n",
+      "T=  4070.0\n",
+      "T=  5170.0\n",
+      "T=  5170.0\n",
+      "T=  5170.0\n",
+      "T=  5170.0\n",
+      "T=  6240.0\n",
+      "T=  6240.0\n",
+      "T=  6240.0\n",
+      "T=  6240.0\n",
+      "T=  5590.0\n",
+      "T=  5590.0\n",
+      "T=  5280.0\n",
+      "T=  5280.0\n",
+      "T=  4230.0\n",
+      "T=  4230.0\n",
+      "T=  4620.0\n",
+      "T=  4620.0\n",
+      "T=  4830.0\n",
+      "T=  4830.0\n",
+      "T=  6340.0\n",
+      "T=  6340.0\n",
+      "T=  5880.0\n",
+      "T=  5880.0\n",
+      "T=  3650.0\n",
+      "T=  3650.0\n",
+      "T=  4620.0\n",
+      "T=  4620.0\n",
+      "T=  4620.0\n",
+      "T=  4620.0\n",
+      "T=  5770.0\n",
+      "T=  5770.0\n",
+      "T=  3550.0\n",
+      "T=  3550.0\n",
+      "T=  5530.0\n",
+      "T=  5530.0\n",
+      "T=  3000.0\n",
+      "T=  3000.0\n",
+      "T=  3250.0\n",
+      "T=  3250.0\n",
+      "T=  5280.0\n",
+      "T=  5280.0\n",
+      "T=  4000.0\n",
+      "T=  4000.0\n",
+      "T=  4620.0\n",
+      "T=  4620.0\n",
+      "T=  5530.0\n",
+      "T=  5530.0\n",
+      "T=  4230.0\n",
+      "T=  4230.0\n",
+      "T=  4620.0\n",
+      "T=  4620.0\n",
+      "T=  3200.0\n",
+      "T=  3200.0\n",
+      "T=  3800.0\n",
+      "T=  3800.0\n",
+      "T=  3870.0\n",
+      "T=  3870.0\n",
+      "T=  5490.0\n",
+      "T=  5490.0\n",
+      "T=  5660.0\n",
+      "T=  5660.0\n",
+      "T=  5340.0\n",
+      "T=  5340.0\n",
+      "T=  5170.0\n",
+      "T=  5170.0\n",
+      "T=  5720.0\n",
+      "T=  5720.0\n",
+      "T=  5530.0\n",
+      "T=  5530.0\n",
+      "T=  4830.0\n",
+      "T=  4830.0\n",
+      "T=  5490.0\n",
+      "T=  5490.0\n",
+      "T=  4070.0\n",
+      "T=  4070.0\n",
+      "T=  5170.0\n",
+      "T=  5170.0\n",
+      "T=  4620.0\n",
+      "T=  4620.0\n",
+      "T=  3030.0\n",
+      "T=  3030.0\n",
+      "T=  3870.0\n",
+      "T=  3870.0\n",
+      "T=  4620.0\n",
+      "T=  4620.0\n",
+      "T=  4000.0\n",
+      "T=  4000.0\n",
+      "T=  4070.0\n",
+      "T=  4070.0\n",
+      "T=  3700.0\n",
+      "T=  3700.0\n",
+      "T=  4410.0\n",
+      "T=  4410.0\n",
+      "T=  3870.0\n",
+      "T=  3870.0\n",
+      "T=  4830.0\n",
+      "T=  4830.0\n",
+      "T=  3700.0\n",
+      "T=  3700.0\n",
+      "T=  4620.0\n",
+      "T=  4620.0\n",
+      "T=  4830.0\n",
+      "T=  4830.0\n",
+      "T=  5170.0\n",
+      "T=  5170.0\n",
+      "T=  3250.0\n",
+      "T=  3250.0\n",
+      "T=  4620.0\n",
+      "T=  4620.0\n",
+      "T=  3700.0\n",
+      "T=  3700.0\n",
+      "T=  5880.0\n",
+      "T=  5880.0\n",
+      "T=  4830.0\n",
+      "T=  4830.0\n",
+      "T=  5170.0\n",
+      "T=  5170.0\n",
+      "T=  3870.0\n",
+      "T=  3870.0\n",
+      "T=  5590.0\n",
+      "T=  5590.0\n",
+      "T=  5490.0\n",
+      "T=  5490.0\n",
+      "T=  5720.0\n",
+      "T=  5720.0\n",
+      "T=  5490.0\n",
+      "T=  5490.0\n",
+      "T=  4620.0\n",
+      "T=  4620.0\n",
+      "T=  5280.0\n",
+      "T=  5280.0\n",
+      "T=  4070.0\n",
+      "T=  4070.0\n",
+      "T=  5040.0\n",
+      "T=  5040.0\n",
+      "T=  4830.0\n",
+      "T=  4830.0\n",
+      "T=  4620.0\n",
+      "T=  4620.0\n",
+      "T=  5590.0\n",
+      "T=  5590.0\n",
+      "T=  5040.0\n",
+      "T=  5040.0\n",
+      "T=  4230.0\n",
+      "T=  4230.0\n",
+      "T=  5490.0\n",
+      "T=  5490.0\n",
+      "T=  4830.0\n",
+      "T=  4830.0\n",
+      "T=  4620.0\n",
+      "T=  4620.0\n",
+      "T=  4620.0\n",
+      "T=  4620.0\n",
+      "T=  4230.0\n",
+      "T=  4230.0\n",
+      "T=  4410.0\n",
+      "T=  4410.0\n",
+      "T=  4620.0\n",
+      "T=  4620.0\n",
+      "T=  5530.0\n",
+      "T=  5530.0\n",
+      "T=  4830.0\n",
+      "T=  4830.0\n",
+      "T=  4830.0\n",
+      "T=  4830.0\n",
+      "T=  5590.0\n",
+      "T=  5590.0\n",
+      "T=  4000.0\n",
+      "T=  4000.0\n",
+      "T=  4000.0\n",
+      "T=  4000.0\n",
+      "T=  3250.0\n",
+      "T=  3250.0\n",
+      "T=  3200.0\n",
+      "T=  3200.0\n",
+      "T=  3000.0\n",
+      "T=  3000.0\n",
+      "T=  3500.0\n",
+      "T=  3500.0\n",
+      "T=  3030.0\n",
+      "T=  3030.0\n",
+      "T=  5040.0\n",
+      "T=  5040.0\n",
+      "T=  5040.0\n",
+      "T=  5040.0\n",
+      "T=  4000.0\n",
+      "T=  4000.0\n",
+      "T=  4830.0\n",
+      "T=  4830.0\n",
+      "T=  4830.0\n",
+      "T=  4830.0\n",
+      "T=  3700.0\n",
+      "T=  3700.0\n",
+      "T=  4410.0\n",
+      "T=  4410.0\n",
+      "T=  4410.0\n",
+      "T=  4410.0\n",
+      "T=  4230.0\n",
+      "T=  4230.0\n",
+      "T=  4000.0\n",
+      "T=  4000.0\n",
+      "T=  4620.0\n",
+      "T=  4620.0\n",
+      "T=  4830.0\n",
+      "T=  4830.0\n",
+      "T=  5530.0\n",
+      "T=  5530.0\n",
+      "T=  5490.0\n",
+      "T=  5490.0\n",
+      "T=  5920.0\n",
+      "T=  5920.0\n",
+      "T=  3030.0\n",
+      "T=  3030.0\n",
+      "T=  3870.0\n",
+      "T=  3870.0\n",
+      "T=  4000.0\n",
+      "T=  4000.0\n",
+      "T=  4070.0\n",
+      "T=  4070.0\n",
+      "T=  5660.0\n",
+      "T=  5660.0\n",
+      "T=  5340.0\n",
+      "T=  5340.0\n",
+      "T=  4230.0\n",
+      "T=  4230.0\n",
+      "T=  5660.0\n",
+      "T=  5660.0\n",
+      "T=  3870.0\n",
+      "T=  3870.0\n",
+      "T=  5770.0\n",
+      "T=  5770.0\n",
+      "T=  5340.0\n",
+      "T=  5340.0\n",
+      "T=  4230.0\n",
+      "T=  4230.0\n",
+      "T=  4070.0\n",
+      "T=  4070.0\n",
+      "T=  4410.0\n",
+      "T=  4410.0\n",
+      "T=  4230.0\n",
+      "T=  4230.0\n",
+      "T=  4620.0\n",
+      "T=  4620.0\n",
+      "T=  3250.0\n",
+      "T=  3250.0\n",
+      "T=  5040.0\n",
+      "T=  5040.0\n",
+      "T=  4830.0\n",
+      "T=  4830.0\n",
+      "T=  3800.0\n",
+      "T=  3800.0\n",
+      "T=  4410.0\n",
+      "T=  4410.0\n",
+      "T=  4410.0\n",
+      "T=  4410.0\n",
+      "T=  5340.0\n",
+      "T=  5340.0\n",
+      "T=  3700.0\n",
+      "T=  3700.0\n",
+      "T=  4000.0\n",
+      "T=  4000.0\n",
+      "T=  5590.0\n",
+      "T=  5590.0\n",
+      "T=  5880.0\n",
+      "T=  5880.0\n",
+      "T=  4620.0\n",
+      "T=  4620.0\n",
+      "T=  6240.0\n",
+      "T=  6240.0\n",
+      "T=  3100.0\n",
+      "T=  3100.0\n",
+      "T=  5040.0\n",
+      "T=  5040.0\n",
+      "T=  5490.0\n",
+      "T=  5490.0\n",
+      "T=  5170.0\n",
+      "T=  5170.0\n",
+      "T=  4830.0\n",
+      "T=  4830.0\n",
+      "Index([ 'Unnamed: 0',        'gmag',        'rmag',        'imag',\n",
+      "              'zmag',        'ymag',           'J',           'H',\n",
+      "                 'K',     'RAJ2000',     'DEJ2000',  'spec_class',\n",
+      "                 'T',        'logT',         'BCv',          'Mv',\n",
+      "              'logL',         'B-V',       'Bt-Vt',         'V-G',\n",
+      "               'U-B',        'V-Rc',        'V-Ic',        'V-Ks',\n",
+      "               'J-H',         'H-K',       'Ks-W1',       'W1-W2',\n",
+      "             'W1-W3',       'W1-W4',        'Msun',      'logAge',\n",
+      "               'b-y',         'M_J',        'M_Ks',        'Mbol',\n",
+      "               'i-z',         'z-Y',      'R_Rsun',      '#SpT.1',\n",
+      "         'lum_class',         'u_g',         'g_r',         'r_i',\n",
+      "               'i_z',         'z_J',         'J_H',         'H_K',\n",
+      "          'Jmag_abs',       'T_err',  'R_Rsun_err',            59,\n",
+      "           'L_quiet', 'L_quiet_bol', 'L_quiet_err'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -51,14 +414,14 @@
     "DM = lambda x: 5.*np.log10(float(x))-5. \n",
     "\n",
     "#------------------------------------------------\n",
-    "cluster = 'M44'\n",
-    "test = 'run_09'\n",
+    "cluster = 'Pleiades'\n",
+    "test = 'run_02'\n",
     "#------------------------------------------------\n",
     "\n",
     "basics = cluster_dict[cluster]\n",
     "dm = DM(basics[4])\n",
     "global dm\n",
-    "l = '/home/ekaterina/Documents/appaloosa/stars_shortlist/{0}/{0}_parameter.csv'.format(cluster)\n",
+    "l = '/home/ekaterina/Documents/appaloosa/stars_shortlist/{0}/{0}_new_parameter.csv'.format(cluster)\n",
     "print(glob.glob(l))\n",
     "\n",
     "# if glob.glob(l) != []:\n",
@@ -88,9 +451,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "EPIC\n",
+       "211104755    0.358036\n",
+       "211112392    0.412883\n",
+       "211113061    0.358771\n",
+       "211109428    0.425637\n",
+       "211111655    0.283868\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "r = specs.L_quiet_err/specs.L_quiet\n",
     "r.head()"
@@ -193,13 +573,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(155, 60)\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'outs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-2de0b3176882>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mspecs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mspecs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mspecs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mouts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mspecs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'outs' is not defined"
+     ]
+    }
+   ],
    "source": [
     "print(specs.shape)\n",
     "specs = specs.drop(list(outs))\n",
     "print(specs.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>gmag</th>\n",
+       "      <th>rmag</th>\n",
+       "      <th>imag</th>\n",
+       "      <th>zmag</th>\n",
+       "      <th>ymag</th>\n",
+       "      <th>J</th>\n",
+       "      <th>H</th>\n",
+       "      <th>K</th>\n",
+       "      <th>RAJ2000</th>\n",
+       "      <th>...</th>\n",
+       "      <th>L_quiet</th>\n",
+       "      <th>L_quiet_bol</th>\n",
+       "      <th>r_z</th>\n",
+       "      <th>J_K</th>\n",
+       "      <th>g_z</th>\n",
+       "      <th>g_i</th>\n",
+       "      <th>T_err</th>\n",
+       "      <th>R_Rsun_err</th>\n",
+       "      <th>59.1</th>\n",
+       "      <th>L_quiet_err</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EPIC</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 60 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Unnamed: 0, gmag, rmag, imag, zmag, ymag, J, H, K, RAJ2000, DEJ2000, spec_class, T, logT, BCv, Mv, logL, B-V, Bt-Vt, V-G, U-B, V-Rc, V-Ic, V-Ks, J-H, H-K, Ks-W1, W1-W2, W1-W3, W1-W4, Msun, logAge, b-y, M_J, M_Ks, Mbol, i-z, z-Y, R_Rsun, #SpT.1, lum_class, u_g, g_r, r_i, i_z, z_J, J_H, H_K, Jmag_abs, 59, L_quiet, L_quiet_bol, r_z, J_K, g_z, g_i, T_err, R_Rsun_err, 59.1, L_quiet_err]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 60 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "specs[specs['T']<3000]"
    ]
   },
   {
