--- a/appaloosa/FFI_correction.ipynb
+++ b/appaloosa/FFI_correction.ipynb
@@ -171,8 +171,8 @@
    ],
    "source": [
     "loc = '/home/ekaterina/Documents/appaloosa/stars_shortlist/'\n",
-    "cluster = 'Pleiades'\n",
-    "C = '04'\n",
+    "cluster = 'M67'\n",
+    "C = '05'\n",
     "test = 'run_01'\n",
     "LCtype = 'everest'\n",
     "EPIC = 211099781\n",
